--- a/VRCTranscriptMod/VRCTranscriptMod.csproj
+++ b/VRCTranscriptMod/VRCTranscriptMod.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,6 +33,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -50,6 +52,7 @@
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
@@ -246,6 +249,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -577,6 +581,7 @@
     <Compile Include="Vosk\Vosk.cs" />
     <Compile Include="Vosk\VoskPINVOKE.cs" />
     <Compile Include="Vosk\VoskRecognizer.cs" />
+    <Compile Include="VRCTranscribe\SettingsTabMenu.cs" />
     <Compile Include="VRCTranscribe\SessionPool.cs" />
     <Compile Include="VRCTranscribe\SubtitleUi.cs" />
     <Compile Include="VRCTranscribe\TranscribeWorker.cs" />
@@ -592,6 +597,7 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -608,6 +614,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\libstdc++-6.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="VRCTranscribe\assets\livecaptionicon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
