--- a/VRCTranscriptMod/VRCLiveCaptionsMod.csproj
+++ b/VRCTranscriptMod/VRCLiveCaptionsMod.csproj
@@ -493,9 +493,6 @@
     <Reference Include="ValueTupleBridge">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\VRChat\MelonLoader\Managed\ValueTupleBridge.dll</HintPath>
     </Reference>
-    <Reference Include="Vosk, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Vosk.0.3.30\lib\netstandard2.0\Vosk.dll</HintPath>
-    </Reference>
     <Reference Include="VRC.SDKBase.Editor.BuildPipeline">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\VRChat\MelonLoader\Managed\VRC.SDKBase.Editor.BuildPipeline.dll</HintPath>
     </Reference>
@@ -531,9 +528,6 @@
     </Reference>
     <Reference Include="VRCCore-Standalone">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\VRChat\MelonLoader\Managed\VRCCore-Standalone.dll</HintPath>
-    </Reference>
-    <Reference Include="VRChatUtilityKit">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\VRChat\Mods\VRChatUtilityKit.dll</HintPath>
     </Reference>
     <Reference Include="VRCLog">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\VRChat\MelonLoader\Managed\VRCLog.dll</HintPath>
@@ -584,6 +578,30 @@
     <Compile Include="LiveCaptions\VoskSpecific\VoskVoiceRecognizer.cs" />
     <Compile Include="LiveCaptions\GameSpecific\VRChat\VRCTranscriptModMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vosk\Model.cs" />
+    <Compile Include="Vosk\SpkModel.cs" />
+    <Compile Include="Vosk\Vosk.cs" />
+    <Compile Include="Vosk\VoskPINVOKE.cs" />
+    <Compile Include="Vosk\VoskRecognizer.cs" />
+    <Compile Include="VRChatUtilityKit\Components\EnableDisableListener.cs" />
+    <Compile Include="VRChatUtilityKit\Ui\ElementBase.cs" />
+    <Compile Include="VRChatUtilityKit\Ui\ElementWithText.cs" />
+    <Compile Include="VRChatUtilityKit\Ui\Label.cs" />
+    <Compile Include="VRChatUtilityKit\Ui\QuarterButton.cs" />
+    <Compile Include="VRChatUtilityKit\Ui\SingleButton.cs" />
+    <Compile Include="VRChatUtilityKit\Ui\SubMenu.cs" />
+    <Compile Include="VRChatUtilityKit\Ui\TabButton.cs" />
+    <Compile Include="VRChatUtilityKit\Ui\ToggleButton.cs" />
+    <Compile Include="VRChatUtilityKit\Ui\UiManager.cs" />
+    <Compile Include="VRChatUtilityKit\Utilities\AsyncUtils.cs" />
+    <Compile Include="VRChatUtilityKit\Utilities\Converters.cs" />
+    <Compile Include="VRChatUtilityKit\Utilities\CursorUtils.cs" />
+    <Compile Include="VRChatUtilityKit\Utilities\DataUtils.cs" />
+    <Compile Include="VRChatUtilityKit\Utilities\Extensions.cs" />
+    <Compile Include="VRChatUtilityKit\Utilities\NetworkEvents.cs" />
+    <Compile Include="VRChatUtilityKit\Utilities\SemverVersion.cs" />
+    <Compile Include="VRChatUtilityKit\Utilities\VRCUtils.cs" />
+    <Compile Include="VRChatUtilityKit\Utilities\XrefUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -592,17 +610,15 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Vosk\.gitignore" />
+    <Content Include="VRChatUtilityKit\.gitignore" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="LiveCaptions\assets\livecaptionicon.png" />
-    <None Include="packages.config" />
+    <None Include="Vosk\COPYING" />
+    <None Include="Vosk\README.md" />
+    <None Include="VRChatUtilityKit\LICENSE" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Vosk.0.3.30\build\Vosk.targets" Condition="Exists('..\packages\Vosk.0.3.30\build\Vosk.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Vosk.0.3.30\build\Vosk.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Vosk.0.3.30\build\Vosk.targets'))" />
-  </Target>
 </Project>
