--- a/VRCTranscriptMod/VRCLiveCaptionsMod.csproj
+++ b/VRCTranscriptMod/VRCLiveCaptionsMod.csproj
@@ -46,7 +46,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
-    <DefineConstants>TRACE;USE_SHORT</DefineConstants>
+    <DefineConstants>TRACE;USE_SHORT INTEGRATED_VRCUK</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -602,6 +602,7 @@
     <Compile Include="VRChatUtilityKit\Utilities\SemverVersion.cs" />
     <Compile Include="VRChatUtilityKit\Utilities\VRCUtils.cs" />
     <Compile Include="VRChatUtilityKit\Utilities\XrefUtils.cs" />
+    <Compile Include="VRChatUtilityKit\VRChatUtilityKitMod.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
